[package]
name = "rstore"
version = "0.0.0"
edition = "2024"
license = "MIT" 
authors = ["myyrakle <sssang97@naver.com>"] 
description = "ready" 
keywords = [] 
include = ["src/*", "Cargo.toml"]
exclude = []
readme = "README.md" 
repository = "https://github.com/myyrakle/rrdb"
documentation = "https://github.com/myyrakle/rstore/blob/master/README.md"
homepage = "https://github.com/myyrakle/rrdb/blob/master/README.md"

[dependencies]
