[package]
name = "rstore"
version = "0.0.0"
edition = "2024"
license = "MIT" 
authors = ["myyrakle <sssang97@naver.com>"] 
description = "ready" 
keywords = [] 
include = ["src/*", "Cargo.toml"]
exclude = []
readme = "README.md" 
repository = "https://github.com/myyrakle/rstore"
documentation = "https://github.com/myyrakle/rstore/blob/master/README.md"
homepage = "https://github.com/myyrakle/rstore/blob/master/README.md"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"

[[bin]]
name = "http"
path = "./src/http.rs"