[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
redis = "0.29.2"
memcache = "0.18.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rstore = "0.1.0"
tokio = { version = "1.44.2", features = ["full"] }
futures = "0.3.31"
async-trait = "0.1.88"
